<resources>
    <string name="app_name">Any and Everything</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="submit_text">Submit</string>
    <string name="firstName">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
